Fix spacing

--- a/assets/scss/components/_breadcrumbs.scss
+++ b/assets/scss/components/_breadcrumbs.scss
@@ -11,6 +11,6 @@
 	--link--color: var(--global--color--4);
 
 	.vite-breadcrumbs-separator {
-		margin-inline: 3px;
+		margin-inline: 5px;
 	}
 }
